hotelReservation/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hotel-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: hotel
        protocol: HTTP
      hosts:
        - "*"
