hotelReservation/istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hotel-vs
spec:
  hosts:
    - "*"
  gateways:
    - hotel-gateway
  http:
    - match:
        - uri:
            prefix: /
        - uri:
            exact: /hotels
        - uri:
            exact: /recommendations
        - uri:
            exact: /user
        - uri:
            exact: /reservation
      route:
        - destination:
            host: frontend
            port:
              number: 5000
